examples/test/testpolicy11776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11776
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key14: value6
      key33: value39
      key45: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value24
      podSelector:
        matchLabels:
          key29: value22
          key35: value8
